--- a/templates/octavia.conf.j2
+++ b/templates/octavia.conf.j2
@@ -3,6 +3,30 @@ debug = {{ debug }}
 use_journal = True
 executor_thread_pool_size = {{ octavia_rpc_thread_pool_size }}
 rpc_conn_pool_size = {{ octavia_rpc_conn_pool_size }}
+
+{% if not octavia_v2|bool %}
+bind_host = 0.0.0.0
+bind_port = {{ octavia_service_port }}
+# api_handler = queue_producer
+#
+# How should authentication be handled (keystone, noauth)
+auth_strategy = {{ octavia_auth_strategy }}
+#
+{% endif %}
+# Plugin options are hot_plug_plugin (Hot-pluggable controller plugin)
+#
+# octavia_plugins = hot_plug_plugin
+
+# Hostname to be used by the host machine for services running on it.
+# The default value is the hostname of the host machine.
+# host =
+
+# AMQP Transport URL
+# For Single Host, specify one full transport URL:
+#   transport_url = rabbit://<user>:<pass>@127.0.0.1:5672/<vhost>
+# For HA, specify queue nodes in cluster, comma delimited:
+#   transport_url = rabbit://<user>:<pass>@server01,<user>:<pass>@server02/<vhost>
+
 transport_url = {{ octavia_oslomsg_rpc_transport }}://{% for host in octavia_oslomsg_rpc_servers.split(',') %}{{ octavia_oslomsg_rpc_userid }}:{{ octavia_oslomsg_rpc_password }}@{{ host }}:{{ octavia_oslomsg_rpc_port }}{% if not loop.last %},{% else %}/{{ octavia_oslomsg_rpc_vhost }}{% if octavia_oslomsg_rpc_use_ssl | bool %}?ssl=1{% else %}?ssl=0{% endif %}{% endif %}{% endfor %}
 
 [api_settings]
@@ -38,6 +62,9 @@ bind_port = {{ octavia_health_manager_port }}
 controller_ip_port_list = {% for host in octavia_hm_hosts.split(',') %}{{ host }}:{{ octavia_health_manager_port }}{% if not loop.last %},{% endif %}{% endfor %}
 
 heartbeat_key = {{ octavia_health_hmac_key }}
+# heartbeat_timeout = 60
+# health_check_interval = 3
+# sock_rlimit = 0
 
 # Enable provisioning status sync with neutron db
 sync_provisioning_status = {{ octavia_sync_provisioning_status }}
@@ -115,6 +142,38 @@ loadbalancer_topology = {{ octavia_loadbalancer_topology }}
 # engine = serial
 max_workers = {{ octavia_task_flow_max_workers }}
 
+[house_keeping]
+# Interval in seconds to initiate spare amphora checks
+# spare_check_interval = 30
+spare_amphora_pool_size = {{ octavia_spare_amphora_pool_size }}
+
+# Cleanup interval for Deleted amphora
+# cleanup_interval = 30
+# Amphora expiry age in seconds. Default is 1 week
+# amphora_expiry_age = 604800
+
+# Load balancer expiry age in seconds. Default is 1 week
+# load_balancer_expiry_age = 604800
+
+[amphora_agent]
+# agent_server_ca = /etc/octavia/certs/client_ca.pem
+# agent_server_cert = /etc/octavia/certs/server.pem
+# agent_server_network_dir = /etc/netns/amphora-haproxy/network/interfaces.d/
+# agent_server_network_file =
+# agent_request_read_timeout = 120
+
+[keepalived_vrrp]
+# Amphora Role/Priority advertisement interval in seconds
+# vrrp_advert_int = 1
+
+# Service health check interval and success/fail count
+# vrrp_check_interval = 5
+# vrpp_fail_count = 2
+# vrrp_success_count = 2
+
+# Amphora MASTER gratuitous ARP refresh settings
+# vrrp_garp_refresh_interval = 5
+# vrrp_garp_refresh_count = 2
 
 [service_auth]
 insecure = {{ keystone_service_internaluri_insecure | bool }}
