--- a/templates/octavia.conf.j2
+++ b/templates/octavia.conf.j2
@@ -2,6 +2,8 @@
 # Print debugging output (set logging level to DEBUG instead of default WARNING level).
 debug = {{ debug }}
 use_journal = True
+executor_thread_pool_size = {{ octavia_rpc_thread_pool_size }}
+rpc_conn_pool_size = {{ octavia_rpc_conn_pool_size }}
 
 {% if not octavia_v2|bool %}
 bind_host = 0.0.0.0
@@ -28,9 +30,6 @@ auth_strategy = {{ octavia_auth_strategy }}
 
 transport_url = {{ octavia_oslomsg_rpc_transport }}://{% for host in octavia_oslomsg_rpc_servers.split(',') %}{{ octavia_oslomsg_rpc_userid }}:{{ octavia_oslomsg_rpc_password }}@{{ host }}:{{ octavia_oslomsg_rpc_port }}{% if not loop.last %},{% else %}/{{ octavia_oslomsg_rpc_vhost }}{% if octavia_oslomsg_rpc_use_ssl | bool %}?ssl=1{% else %}?ssl=0{% endif %}{% endif %}{% endfor %}
 
-[oslo_messaging_notifications]
-transport_url = {{ octavia_oslomsg_notify_transport }}://{% for host in octavia_oslomsg_notify_servers.split(',') %}{{ octavia_oslomsg_notify_userid }}:{{ octavia_oslomsg_notify_password }}@{{ host }}:{{ octavia_oslomsg_notify_port }}{% if not loop.last %},{% else %}/{{ octavia_oslomsg_notify_vhost }}{% if octavia_oslomsg_notify_use_ssl | bool %}?ssl=1{% else %}?ssl=0{% endif %}{% endif %}{% endfor %}
-
 [api_settings]
 bind_host = 0.0.0.0
 bind_port = {{ octavia_service_port }}
@@ -45,10 +44,15 @@ api_v2_enabled = {{ octavia_v2 }}
 # Allow users to create TLS Terminated listeners?
 allow_tls_terminated_listeners = {{ octavia_tls_listener_enabled }}
 
-# pre Ocata
+[oslo_messaging]
+topic = octavia_prov
+
 [oslo_messaging_rabbit]
 ssl = {{ octavia_oslomsg_rpc_use_ssl }}
-rpc_conn_pool_size = {{ octavia_rpc_conn_pool_size }}
+
+[oslo_messaging_notifications]
+driver = {{ (octavia_ceilometer_enabled | bool) | ternary('messagingv2', 'noop') }}
+transport_url = {{ octavia_oslomsg_notify_transport }}://{% for host in octavia_oslomsg_notify_servers.split(',') %}{{ octavia_oslomsg_notify_userid }}:{{ octavia_oslomsg_notify_password }}@{{ host }}:{{ octavia_oslomsg_notify_port }}{% if not loop.last %},{% else %}/{{ octavia_oslomsg_notify_vhost }}{% if octavia_oslomsg_notify_use_ssl | bool %}?ssl=1{% else %}?ssl=0{% endif %}{% endif %}{% endfor %}
 
 [database]
 connection = mysql+pymysql://{{ octavia_galera_user }}:{{ octavia_container_mysql_password }}@{{ octavia_galera_address }}/{{ octavia_galera_database }}?charset=utf8{% if octavia_galera_use_ssl | bool %}&ssl_ca={{ octavia_galera_ssl_ca_cert }}{% endif %}
@@ -70,11 +74,6 @@ heartbeat_key = {{ octavia_health_hmac_key }}
 # heartbeat_timeout = 60
 # health_check_interval = 3
 # sock_rlimit = 0
-
-# EventStreamer options are
-#                            queue_event_streamer,
-#                            noop_event_streamer
-event_streamer_driver = {% if octavia_event_streamer|bool %}queue_event_streamer{% else %}noop_event_streamer{% endif %}
 
 # Enable provisioning status sync with neutron db
 sync_provisioning_status = {{ octavia_sync_provisioning_status }}
@@ -241,22 +240,6 @@ loadbalancer_topology = {{ octavia_loadbalancer_topology }}
 [task_flow]
 # engine = serial
 max_workers = {{ octavia_task_flow_max_workers }}
-
-[oslo_messaging]
-# Queue Consumer Thread Pool Size
-rpc_thread_pool_size = {{ octavia_rpc_thread_pool_size }}
-
-# Topic (i.e. Queue) Name
-topic = octavia_prov
-
-# Topic for octavia's events sent to a queue
-event_stream_topic = neutron_lbaas_event
-
-# Put it into the Neutron queue
-{% if octavia_event_streamer|bool %}
-event_stream_transport_url = {{ neutron_oslomsg_rpc_transport }}://{% for host in neutron_oslomsg_rpc_servers.split(',') %}{{ octavia_neutron_oslomsg_rpc_userid }}:{{ octavia_neutron_oslomsg_rpc_password }}@{{ host }}:{{ neutron_oslomsg_rpc_port }}{% if not loop.last %},{% else %}/{{ neutron_oslomsg_rpc_vhost }}{% if neutron_oslomsg_rpc_use_ssl | bool %}?ssl=1{% else %}?ssl=0{% endif %}{% endif %}{% endfor %}
-{% endif %}
-
 
 [house_keeping]
 # Interval in seconds to initiate spare amphora checks
